# android-graphics-experiments

./: .gitignore  AndroidManifest.xml  README.md  build.gradle
res/values/: strings.xml
src/astarasikov/github/io/camandnettest/: MyCameraView.java
src/astarasikov/github/io/camandnettest/shaders/: ConvolutionShader.java  ShadesOfGrayShader.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/java/astarasikov/github/io/camandnettest/: CameraActivity.java  MyCameraView.java
src/main/java/astarasikov/github/io/camandnettest/shaders/: CameraShader.java  IdentityShader.java
